--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-<div class="container">
+<div id="container" class="container">
     <div class="header">
         <h2>CodinGame Pro Mode</h2>
         <h3>Enable or disable features</h3>
