Add ConsoleSpace and ZenMode

--- a/src/popup.html
+++ b/src/popup.html
@@ -11,35 +11,12 @@
         <h2>CodinGame Pro Mode</h2>
         <h3>Enable or disable features</h3>
     </div>
-    <div class="setting-row">
-        <label for="proLayout">Pro Layout</label>
-        <label class="switch">
-            <input type="checkbox" id="proLayout">
-            <span class="slider"></span>
-        </label>
+    <div id="settings-container">
+        <!-- Settings will be dynamically generated here -->
     </div>
-    <div class="setting-row">
-        <label for="uploadCode">Upload Code</label>
-        <label class="switch">
-            <input type="checkbox" id="uploadCode">
-            <span class="slider"></span>
-        </label>
-    </div>
-    <div class="setting-row">
-        <label for="syncLocal">Sync Local</label>
-        <label class="switch">
-            <input type="checkbox" id="syncLocal">
-            <span class="slider"></span>
-        </label>
-    </div>
-    <div class="setting-row">
-        <label for="syncOnline">Sync Online</label>
-        <label class="switch">
-            <input type="checkbox" id="syncOnline">
-            <span class="slider"></span>
-        </label>
-    </div>
+    <hr>
+    <p>Refresh CodinGame website to apply the settings.</p>
 </div>
-<script src="popup.js"></script>
+<script type="module" src="popup.js"></script>
 </body>
 </html>
